--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,9 @@
     "firebase": "~2.3.2",
     "angularfire": "~1.1.3",
     "angular-ui-grid": "*",
-    "angular-bootstrap": "~1.1.1"
+    "angular-bootstrap": "~1.1.1",
+    "angular-material": "^1.0.5",
+    "angular-messages": "ng-messages#*"
   },
   "resolutions": {
     "angular": "1.3.17"
