--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "angular-messages": "ng-messages#*"
   },
   "resolutions": {
-    "angular": "1.3.17"
+    "angular": "1.5.0",
+    "angular-messages": "^1.4.8"
   },
   "overrides": {
     "bootstrap": {
