create onerepmaxes finished

--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "angular-ui-grid": "*",
     "angular-bootstrap": "~1.1.1",
     "angular-material": "^1.0.5",
-    "angular-messages": "ng-messages#*"
+    "angular-messages": "ng-messages#*",
+    "angular-i18n": "^1.5.0"
   },
   "resolutions": {
     "angular": "1.5.0",
