--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-bootstrap": "~1.1.1",
     "angular-material": "^1.0.5",
     "angular-messages": "ng-messages#*",
-    "angular-i18n": "^1.5.0"
+    "angular-i18n": "^1.5.0",
+    "angular-material-data-table": "^0.9.12"
   },
   "resolutions": {
     "angular": "1.5.0",
